login with jwttoken

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ PORT=4000
 # MONGO_DB_PASSWORD=admin
 # MONGO_DB_DATABASE=HalalWeb
 MONGO_URL=mongodb+srv://root:admin@cluster0.mob8i.mongodb.net/HalalWebApp
+JWT_SECRET = SECRET_KEY
+
+
