--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoos": "^0.0.1-security",
     "mongoose": "^8.9.5",
